--- a/crypto-tracker/src/styles/colors.scss
+++ b/crypto-tracker/src/styles/colors.scss
@@ -1,3 +1,4 @@
 $red: #ff0000ff;
 $green: #00f300;
 $bg-color: #1a1a1c;
+$header-color: rgb(43, 43, 43);
